--- a/index.html
+++ b/index.html
@@ -26,38 +26,69 @@
                 <li class="menu-item"><a class="link move-links" href="#">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="menu list">
-            <li class="menu-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="menu-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="menu list menu-navigation">
+            <li class="menu-item"><a class="link font" href="mailto:info@devstudio.com">
+                <svg class="icon-contacts" width="16" height="12">
+                <use href="./images/firsticon.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a>
+        </li>
+            <li class="menu-item"><a class="link font" href="tel:+380961111111">
+                <svg class="icon-contacts" width="10" height="16">
+                    <use href="./images/firsticon.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a>
+            </li>
         </ul>
-</div>
+        </div>
     </header>
     <main>
-        <section class="hero">
-        
+        <section class="section hero">
+            <div class="container">
             <h1 class="page-title">Эффективные решения<br>для вашего бизнеса</h1>
             <button class="btn btn-hero" type="button">Заказать услугу</button>
+            </div>
         </section>
         <section class="section"> 
-            <div class="container ">
+            <div class="container">
             <h2 class="visually-hidden">Необходимые качества для успешного бизнеса</h2>
             <ul class="list menu">
                 <li class="menu-item">
+                    <div class="shell-icon">
+                        <svg class="social-icons-svg">
+                            <use href="./images/firsticon.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="title-text title">Внимание к деталям</h3>
                     <p class="title-label ">Идейные соображения, а также начало повседневной работы по формированию
                         позиции.</p>
                 </li>
                 <li class="menu-item">
+                    <div class="shell-icon">
+                        <svg class="social-icons-svg">
+                            <use href="./images/firsticon.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="title-text title">Пунктуальность</h3>
                     <p class="title-label ">Задача организации, в особенности же рамки и место обучения кадров влечет за
                         собой.</p>
                 </li>
                 <li class="menu-item">
+                    <div class="shell-icon">
+                        <svg class="social-icons-svg">
+                            <use href="./images/firsticon.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="title-text title">Планирование</h3>
                     <p class="title-label ">Равным образом консультация с широким активом в значительной степени
                         обуславливает.</p>
                 </li>
                 <li class="menu-item">
+                    <div class="shell-icon">
+                        <svg class="social-icons-svg">
+                            <use href="./images/firsticon.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="title-text title">Современные технологии</h3>
                     <p class="title-label ">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
@@ -65,7 +96,7 @@
             </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section-3">
             <div class="container">
             <h2 class="title section-title"> Чем мы занимаемся </h2>
             <ul class="list card-set">
@@ -87,30 +118,212 @@
             <ul class="list card-set">
                 <li class="item team-name">
                     <img src="images/img.jpg" width="270" alt="Игорь Демьяненко" />
+                    <div class="team-description">
                     <h3 class="title-name title">Игорь Демьяненко</h3>
                     <p class="title-label ">Product Designer</p>
+                    <ul class="team-icon list">
+                        <li class="icon-item">
+                            <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
+                                rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="item team-name">
                     <img src="images/img(1).jpg" width="270" alt="Ольга Репина" />
+                    <div class="team-description">
                     <h3 class="title-name title">Ольга Репина</h3>
                     <p class="title-label ">Frontend Developer</p>
+                    <ul class="team-icon list">
+                        <li class="icon-item">
+                            <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
+                                rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="item team-name">
                     <img src="images/img(2).jpg" width="270" alt="Николай Тарасов" />
+                    <div class="team-description">
                     <h3 class="title-name title">Николай Тарасов</h3>
                     <p class="title-label ">Marketing</p>
+                    <ul class="team-icon list">
+                        <li class="icon-item">
+                            <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
+                                rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="item team-name">
                     <img src="images/img(3).jpg" width="270" alt="Михаил Ермаков" />
+                    <div class="team-description">
                     <h3 class="title-name title">Михаил Ермаков</h3>
                     <p class="title-label ">UI Designer</p>
+                    <ul class="team-icon list">
+                        <li class="icon-item">
+                            <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
+                                rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-item">
+                            <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                                <svg class="icon-social">
+                                    <use href="./images/firsticon.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="title section-title">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="#" class="link clients-link">
+                            <svg class="clients-logo">
+                                <use href="./images/firsticon.svg#icon-company6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <footer class="section dark-bg">
-        <div class="container">
+    <footer class="section-footer dark-bg">
+        <div class="container footer-container">
+        <div class="">
         <a class="link emblem" href="../index.html">Web<span class="emblem-footer">Studio</span></a>
         <address class="address">
             <ul class="list">
@@ -128,6 +341,41 @@
             </ul>
         </address>
     </div>
+    <div class="footer-social">
+        <b class="social-text">ПРИСОЕДИНЯЙТЕСЬ</b>
+        <ul class="team-icon list">
+            <li class="icon-item">
+                <a href="#" class="link link-team-social bgcolor" target="_blank" rel="noopener noreferer">
+                    <svg class="icon-social">
+                        <use href="./images/firsticon.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                    <svg class="icon-social">
+                        <use href="./images/firsticon.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                    <svg class="icon-social">
+                        <use href="./images/firsticon.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
+                    <svg class="icon-social">
+                        <use href="./images/firsticon.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+    </div>
+
     </footer>
     
 </body>
