--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -140,30 +140,30 @@
                 <div class="footer-social">
                     <b class="social-text">ПРИСОЕДИНЯЙТЕСЬ</b>
                     <ul class="team-icon list">
-                        <li class="icon-item">
+                        <li class="icon-item icon-item-footer">
                             <a href="#" class="link link-team-social bgcolor" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="../images/firsticon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="icon-item">
+                        <li class="icon-item icon-item-footer">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="../images/firsticon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="icon-item">
+                        <li class="icon-item icon-item-footer">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="../images/firsticon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="icon-item">
+                        <li class="icon-item icon-item-footer">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="../images/firsticon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
