--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <ul class="list menu">
                 <li class="menu-item">
                     <div class="shell-icon">
-                        <svg class="social-icons-svg">
+                        <svg class="social-icons-svg" width="70" height="70">
                             <use href="./images/firsticon.svg#icon-antenna"></use>
                         </svg>
                     </div>
@@ -65,7 +65,7 @@
                 </li>
                 <li class="menu-item">
                     <div class="shell-icon">
-                        <svg class="social-icons-svg">
+                        <svg class="social-icons-svg" width="70" height="70">
                             <use href="./images/firsticon.svg#icon-clock"></use>
                         </svg>
                     </div>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="menu-item">
                     <div class="shell-icon">
-                        <svg class="social-icons-svg">
+                        <svg class="social-icons-svg" width="70" height="70">
                             <use href="./images/firsticon.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -85,7 +85,7 @@
                 </li>
                 <li class="menu-item">
                     <div class="shell-icon">
-                        <svg class="social-icons-svg">
+                        <svg class="social-icons-svg" width="70" height="70">
                             <use href="./images/firsticon.svg#icon-astronaut"></use>
                         </svg>
                     </div>
@@ -125,28 +125,28 @@
                         <li class="icon-item">
                             <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
                                 rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -163,28 +163,28 @@
                         <li class="icon-item">
                             <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
                                 rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -201,28 +201,28 @@
                         <li class="icon-item">
                             <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
                                 rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -239,28 +239,28 @@
                         <li class="icon-item">
                             <a href="https://www.instagram.com/?hl=ru" class="link link-team-social" target="_blank"
                                 rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-item">
                             <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                                <svg class="icon-social">
+                                <svg class="icon-social" width="20" height="20">
                                     <use href="./images/firsticon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -277,20 +277,20 @@
                 <ul class="clients-list">
                     <li class="clients-item">
                         <a href="#" class="link clients-link">
-                            <svg class="clients-logo">
-                                <use href="./images/firsticon.svg#icon-company1"></use>
+                            <svg class="clients-logo" width="41" height="46.7">
+                                <use href="./images/firsticon.svg#icon-company1" ></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="#" class="link clients-link">
-                            <svg class="clients-logo">
+                            <svg class="clients-logo" width="40" height="52">
                                 <use href="./images/firsticon.svg#icon-company2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a href="#" class="link clients-link">
+                        <a href="#" class="link clients-link" width="43,46" height="41,18">
                             <svg class="clients-logo">
                                 <use href="./images/firsticon.svg#icon-company3"></use>
                             </svg>
@@ -298,22 +298,22 @@
                     </li>
                     <li class="clients-item">
                         <a href="#" class="link clients-link">
-                            <svg class="clients-logo">
+                            <svg class="clients-logo" width="84,44" height="40,62">
                                 <use href="./images/firsticon.svg#icon-company4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="#" class="link clients-link">
-                            <svg class="clients-logo">
+                            <svg class="clients-logo" width="62,54" height="45,43">
                                 <use href="./images/firsticon.svg#icon-company5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="#" class="link clients-link">
-                            <svg class="clients-logo">
-                                <use href="./images/firsticon.svg#icon-company6"></use>
+                            <svg class="clients-logo" width="93,79" height="43,93" >
+                                <use href="./images/firsticon.svg#icon-company6" ></use>
                             </svg>
                         </a>
                     </li>
@@ -344,30 +344,30 @@
     <div class="footer-social">
         <b class="social-text">ПРИСОЕДИНЯЙТЕСЬ</b>
         <ul class="team-icon list">
-            <li class="icon-item">
+            <li class="icon-item icon-item-footer">
                 <a href="#" class="link link-team-social bgcolor" target="_blank" rel="noopener noreferer">
-                    <svg class="icon-social">
+                    <svg class="icon-social" width="20" height="20">
                         <use href="./images/firsticon.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="icon-item">
+            <li class="icon-item icon-item-footer">
                 <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                    <svg class="icon-social">
+                    <svg class="icon-social" width="20" height="20">
                         <use href="./images/firsticon.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            <li class="icon-item">
+            <li class="icon-item icon-item-footer">
                 <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                    <svg class="icon-social">
+                    <svg class="icon-social" width="20" height="20">
                         <use href="./images/firsticon.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li class="icon-item">
+            <li class="icon-item icon-item-footer">
                 <a href="#" class="link link-team-social" target="_blank" rel="noopener noreferer">
-                    <svg class="icon-social">
+                    <svg class="icon-social" width="20" height="20">
                         <use href="./images/firsticon.svg#icon-linkedin"></use>
                     </svg>
                 </a>
